...
    testID: "photo_gallery",
    info: ScreenNames.PHOTO_GALLERY,
    icons: "📸",
  },
  {
    title: "Rich Text Editor",
    testID: "rich_text_editor",
    info: ScreenNames.RICH_TEXT_EDITOR,
    icons: "📝",
  },
  {
    title: "Teleportation order",
    testID: "teleportation_order",
...
